[gd_scene load_steps=4 format=2]

[ext_resource path="res://2dthing/Main.gd" type="Script" id=1]
[ext_resource path="res://2dthing/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://2dthing/Art/Background.png" type="Texture" id=3]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -79.0
margin_top = -102.0
margin_right = 5921.0
margin_bottom = 3898.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[connection signal="reset_game" from="HUD" to="." method="_on_HUD_reset_game"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="undo_move" from="HUD" to="." method="_on_HUD_undo_move"]
